# pybr2022-bot

./: .gitignore  Procfile  README.md  local.env  pyproject.toml
pybr2022/: config.py  main.py  setup.py  utils.py
pybr2022/auth/: cog.py  eventbrite.py  index.py  models.py
pybr2022/auth/templates/: auth_failed.md  authenticated.md  email_missing.md  log_user_not_found.md  user_already_authenticated.md  user_not_in_server.md
pybr2022/messages/: cog.py
pybr2022/messages/templates/: welcome.md
pybr2022/talks/: cog.py  models.py  pretalx.py
pybr2022/talks/templates/: next_talk.md  next_talk_keynote.md
tests/: test_eventbrite.py
tests/data/: event_attendees_first_page.json  event_attendees_second_page.json  event_attendees_single_page.json  event_no_attendees.json
tests/test_auth/: conftest.py  factories.py  test_cog.py  test_eventbrite.py  test_index.py
